Archive and migrate OpenSpec documentation for `tools list` compact output feature
Moves the OpenSpec design, tasks, specs, and proposal related to the `tools list` compact output feature into the archive directory following the feature's implementation. Updates documentation links and cleans up obsolete references.